// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`user > should get user 1`] = `
Object {
  "avatar": Object {
    "large": "https://lain.bgm.tv/pic/user/l/000/38/29/382951.jpg?r=1571167246",
    "medium": "https://lain.bgm.tv/pic/user/m/000/38/29/382951.jpg?r=1571167246",
    "small": "https://lain.bgm.tv/pic/user/s/000/38/29/382951.jpg?r=1571167246",
  },
  "bio": "treeholechan@gmail.com 密码：lovemeplease
（欢迎大家一起维护树洞酱，但请勿随意修改密码）

[url=https://bgm.tv/user/treehole]初心[/url]

[b][url=https://bgm.tv/blog/3996]1. 关于树洞酱的事[/url][/b]
[size=8]任何人都可以钻到这里：可以诉说不为人知的秘密，可以自曝真相，可以晒黑历史，可以说平时不太敢说的话，可以扮演不同的人格……
不用担心维护自己的形象。也许你会说，有什么都可以直接说出来嘛，为什么要这样做？但是既然有一个完全虚拟的网络，为什么非要对应着现实世界每个人都要有个id，有个头像呢？
或者这只是一种尝试吧。[/size]

[b][url=https://bgm.tv/blog/3998]2. 爱护我们的树洞酱[/url][/b]",
  "group": 10,
  "id": 382951,
  "joinedAt": 1512262276,
  "location": "",
  "nickname": "树洞酱",
  "sign": "treeholechan@gmail.com 密码:lovemeplease",
  "site": "bgm.tv/character/13307",
  "user_group": 10,
  "username": "382951",
}
`;

exports[`user collection > should get characters 1`] = `
Object {
  "data": Array [
    Object {
      "character": Object {
        "collects": 329,
        "comment": 56,
        "id": 32,
        "images": Object {
          "grid": "https://lain.bgm.tv/pic/crt/g/ce/65/32_crt_0g9f9.jpg?r=1606033650",
          "large": "https://lain.bgm.tv/pic/crt/l/ce/65/32_crt_0g9f9.jpg?r=1606033650",
          "medium": "https://lain.bgm.tv/pic/crt/m/ce/65/32_crt_0g9f9.jpg?r=1606033650",
          "small": "https://lain.bgm.tv/pic/crt/s/ce/65/32_crt_0g9f9.jpg?r=1606033650",
        },
        "infobox": Object {
          "BWH": Array [
            Object {
              "v": "",
            },
          ],
          "体重": Array [
            Object {
              "v": "",
            },
          ],
          "别名": Array [
            Object {
              "k": "日文名",
              "v": "ちぃ",
            },
            Object {
              "k": "罗马字",
              "v": "chii",
            },
            Object {
              "k": "第二中文名",
              "v": "小唧",
            },
          ],
          "声优": Array [
            Object {
              "v": "田中理惠",
            },
          ],
          "引用来源": Array [
            Object {
              "v": "anidb.net",
            },
          ],
          "忌日": Array [
            Object {
              "v": "",
            },
          ],
          "性别": Array [
            Object {
              "v": "女",
            },
          ],
          "生日": Array [
            Object {
              "v": "4月13日",
            },
          ],
          "简体中文名": Array [
            Object {
              "v": "小叽",
            },
          ],
          "血型": Array [
            Object {
              "v": "",
            },
          ],
          "身高": Array [
            Object {
              "v": "152cm",
            },
          ],
        },
        "lock": false,
        "name": "ちぃ",
        "nsfw": false,
        "redirect": 0,
        "role": 1,
        "summary": "传说中性能超强的人型电脑，故事第一话时被人弃置在垃圾场，后被我们的本须和秀树发现，并抱回家。由于开始时唧只会'唧，唧'的这样叫，所以秀树为其取名 '唧'TV版第二话「ちぃでかける」时发现小唧本身并没有安OS，不过因为拥有“学习程式”，所以可以通过对话和教导让她‘成长’起来。",
      },
      "createdAt": 1296496835,
    },
  ],
  "total": 3,
}
`;

exports[`user collection > should get created indexes 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": 1352366596,
      "id": 15045,
      "title": "日本动画最高收视率TOP100",
      "total": 101,
      "type": 0,
    },
  ],
  "total": 1,
}
`;

exports[`user collection > should get episodes 1`] = `
Object {
  "data": Array [
    Object {
      "episode": Object {
        "airdate": "2009-09-23",
        "comment": 0,
        "desc": "",
        "disc": 0,
        "duration": "",
        "id": 17224,
        "lock": true,
        "name": "Nameless, Faceless (Part 3)",
        "nameCN": "",
        "sort": 1,
        "subjectID": 2703,
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "episode": Object {
        "airdate": "2009-09-30",
        "comment": 0,
        "desc": "",
        "disc": 0,
        "duration": "",
        "id": 17225,
        "lock": true,
        "name": "Haunted",
        "nameCN": "",
        "sort": 2,
        "subjectID": 2703,
        "type": 0,
      },
      "type": 2,
    },
  ],
  "total": 23,
}
`;

exports[`user collection > should get indexes 1`] = `
Object {
  "data": Array [],
  "total": 0,
}
`;

exports[`user collection > should get persons 1`] = `
Object {
  "data": Array [],
  "total": 0,
}
`;

exports[`user collection > should get single character 1`] = `
Object {
  "character": Object {
    "collects": 329,
    "comment": 56,
    "id": 32,
    "images": Object {
      "grid": "https://lain.bgm.tv/pic/crt/g/ce/65/32_crt_0g9f9.jpg?r=1606033650",
      "large": "https://lain.bgm.tv/pic/crt/l/ce/65/32_crt_0g9f9.jpg?r=1606033650",
      "medium": "https://lain.bgm.tv/pic/crt/m/ce/65/32_crt_0g9f9.jpg?r=1606033650",
      "small": "https://lain.bgm.tv/pic/crt/s/ce/65/32_crt_0g9f9.jpg?r=1606033650",
    },
    "infobox": Object {
      "BWH": Array [
        Object {
          "v": "",
        },
      ],
      "体重": Array [
        Object {
          "v": "",
        },
      ],
      "别名": Array [
        Object {
          "k": "日文名",
          "v": "ちぃ",
        },
        Object {
          "k": "罗马字",
          "v": "chii",
        },
        Object {
          "k": "第二中文名",
          "v": "小唧",
        },
      ],
      "声优": Array [
        Object {
          "v": "田中理惠",
        },
      ],
      "引用来源": Array [
        Object {
          "v": "anidb.net",
        },
      ],
      "忌日": Array [
        Object {
          "v": "",
        },
      ],
      "性别": Array [
        Object {
          "v": "女",
        },
      ],
      "生日": Array [
        Object {
          "v": "4月13日",
        },
      ],
      "简体中文名": Array [
        Object {
          "v": "小叽",
        },
      ],
      "血型": Array [
        Object {
          "v": "",
        },
      ],
      "身高": Array [
        Object {
          "v": "152cm",
        },
      ],
    },
    "lock": false,
    "name": "ちぃ",
    "nsfw": false,
    "redirect": 0,
    "role": 1,
    "summary": "传说中性能超强的人型电脑，故事第一话时被人弃置在垃圾场，后被我们的本须和秀树发现，并抱回家。由于开始时唧只会'唧，唧'的这样叫，所以秀树为其取名 '唧'TV版第二话「ちぃでかける」时发现小唧本身并没有安OS，不过因为拥有“学习程式”，所以可以通过对话和教导让她‘成长’起来。",
  },
  "createdAt": 1296496835,
}
`;

exports[`user collection > should get single episode 1`] = `
Object {
  "episode": Object {
    "airdate": "2009-10-14",
    "comment": 0,
    "desc": "",
    "disc": 0,
    "duration": "",
    "id": 17227,
    "lock": true,
    "name": "Hopeless",
    "nameCN": "",
    "sort": 4,
    "subjectID": 2703,
    "type": 0,
  },
  "type": 2,
}
`;

exports[`user collection > should get single index 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "collection not found",
  "statusCode": 404,
}
`;

exports[`user collection > should get single person 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "collection not found",
  "statusCode": 404,
}
`;

exports[`user collection > should get single subject 1`] = `
Object {
  "comment": "test comment",
  "epStatus": 23,
  "private": false,
  "rate": 0,
  "subject": Object {
    "airtime": Object {
      "date": "2008-04-06",
      "month": 4,
      "weekday": 7,
      "year": 2008,
    },
    "collection": Object {
      "1": 622,
      "2": 13216,
      "3": 147,
      "4": 224,
      "5": 115,
    },
    "eps": 25,
    "id": 8,
    "images": Object {
      "common": "https://lain.bgm.tv/pic/cover/c/c9/f0/8_wK0z3.jpg",
      "grid": "https://lain.bgm.tv/pic/cover/g/c9/f0/8_wK0z3.jpg",
      "large": "https://lain.bgm.tv/pic/cover/l/c9/f0/8_wK0z3.jpg",
      "medium": "https://lain.bgm.tv/pic/cover/m/c9/f0/8_wK0z3.jpg",
      "small": "https://lain.bgm.tv/pic/cover/s/c9/f0/8_wK0z3.jpg",
    },
    "infobox": Object {
      "Copyright": Array [
        Object {
          "v": "（C）2006 SUNRISE inc./MBS",
        },
      ],
      "中文名": Array [
        Object {
          "v": "Code Geass 反叛的鲁路修R2",
        },
      ],
      "人物原案": Array [
        Object {
          "v": "CLAMP",
        },
      ],
      "人物设定": Array [
        Object {
          "v": "木村貴宏",
        },
      ],
      "其他": Array [
        Object {
          "v": "",
        },
      ],
      "其他电视台": Array [
        Object {
          "v": "",
        },
      ],
      "别名": Array [
        Object {
          "v": "叛逆的鲁路修R2",
        },
        Object {
          "v": "Code Geass: Hangyaku no Lelouch R2",
        },
        Object {
          "v": "叛逆的勒鲁什R2",
        },
        Object {
          "v": "叛逆的鲁鲁修R2",
        },
        Object {
          "v": "コードギアス 反逆のルルーシュR2",
        },
        Object {
          "v": "Code Geass: Lelouch of the Rebellion R2",
        },
        Object {
          "v": "叛逆的勒路什R2",
        },
      ],
      "动画制作": Array [
        Object {
          "v": "サンライズ",
        },
      ],
      "官方网站": Array [
        Object {
          "v": "http://www.geass.jp/r2/",
        },
      ],
      "导演": Array [
        Object {
          "v": "谷口悟朗",
        },
      ],
      "摄影监督": Array [
        Object {
          "v": "大矢創太",
        },
      ],
      "播放电视台": Array [
        Object {
          "v": "每日放送",
        },
      ],
      "播放结束": Array [
        Object {
          "v": "2008年9月28日",
        },
      ],
      "放送开始": Array [
        Object {
          "v": "2008年4月6日",
        },
      ],
      "放送星期": Array [
        Object {
          "v": "",
        },
      ],
      "系列构成": Array [
        Object {
          "v": "大河内一楼",
        },
      ],
      "美术监督": Array [
        Object {
          "v": "菱沼由典",
        },
      ],
      "色彩设计": Array [
        Object {
          "v": "岩沢れい子",
        },
      ],
      "话数": Array [
        Object {
          "v": "25",
        },
      ],
      "音乐": Array [
        Object {
          "v": "中川幸太郎、黒石ひとみ",
        },
      ],
      "音乐制作": Array [
        Object {
          "v": "AUDIO PLANNING U",
        },
      ],
      "音响监督": Array [
        Object {
          "v": "浦上靖夫、井澤基",
        },
      ],
    },
    "locked": false,
    "metaTags": Array [],
    "name": "コードギアス 反逆のルルーシュR2",
    "nameCN": "Code Geass 反叛的鲁路修R2",
    "nsfw": false,
    "platform": Object {
      "alias": "tv",
      "enableHeader": true,
      "id": 1,
      "order": 0,
      "type": "TV",
      "typeCN": "TV",
      "wikiTpl": "TVAnime",
    },
    "rating": Object {
      "count": Array [
        44,
        15,
        32,
        66,
        145,
        457,
        1472,
        3190,
        2640,
        1377,
      ],
      "score": 8.19,
      "total": 9438,
    },
    "redirect": 0,
    "series": false,
    "seriesEntry": 0,
    "summary": "　　“东京决战”一年后，布里塔尼亚少年鲁路修在11区（原日本国）过着平凡的学生生活。但是，鲁路修与弟弟罗洛的一次出行，遇到了黑色骑士团的余党。在与少女C.C再次结成契约之后，尘封的记忆摆在了鲁路修的面前。
　　身为帝国王子的鲁路修，为了建立人人平等的世界、让妹妹娜娜丽幸福的世界，而使用GEASS，令人绝对服从的力量，带领黑色骑士团向帝国宣战。带上假面化名ZERO的他，却在一年前的“东京决战”中被好友朱雀击败，被帝国皇帝抹去了记忆。
　　现在，恢复记忆的鲁路修不仅要面对帝国的强大军事力量，更要面对虚假的弟弟罗洛、失踪的妹妹娜娜丽、不知敌友的中华联盟、内部出现分歧的黑色骑士团。面对内忧外患，鲁路修走上了GEASS之力的诅咒——孤独的王之路。 ",
    "tags": Array [
      Object {
        "count": 1645,
        "name": "叛逆的鲁鲁修",
      },
      Object {
        "count": 1229,
        "name": "SUNRISE",
      },
      Object {
        "count": 936,
        "name": "反逆のルルーシュ",
      },
      Object {
        "count": 721,
        "name": "还是死妹控",
      },
      Object {
        "count": 664,
        "name": "TV",
      },
      Object {
        "count": 603,
        "name": "妹控",
      },
      Object {
        "count": 569,
        "name": "codegeass",
      },
      Object {
        "count": 523,
        "name": "谷口悟朗",
      },
      Object {
        "count": 453,
        "name": "鲁路修",
      },
      Object {
        "count": 427,
        "name": "R2",
      },
      Object {
        "count": 409,
        "name": "2008",
      },
      Object {
        "count": 385,
        "name": "原创",
      },
      Object {
        "count": 357,
        "name": "2008年4月",
      },
      Object {
        "count": 174,
        "name": "大河内一楼",
      },
      Object {
        "count": 151,
        "name": "日升",
      },
      Object {
        "count": 120,
        "name": "萝卜",
      },
      Object {
        "count": 111,
        "name": "机战",
      },
      Object {
        "count": 104,
        "name": "狗得鸡鸭死",
      },
      Object {
        "count": 94,
        "name": "福山润",
      },
      Object {
        "count": 84,
        "name": "露露胸",
      },
      Object {
        "count": 69,
        "name": "CLAMP",
      },
      Object {
        "count": 67,
        "name": "科幻",
      },
      Object {
        "count": 62,
        "name": "鲁鲁修",
      },
      Object {
        "count": 57,
        "name": "GEASS",
      },
      Object {
        "count": 54,
        "name": "神作",
      },
      Object {
        "count": 49,
        "name": "战斗",
      },
      Object {
        "count": 41,
        "name": "战争",
      },
      Object {
        "count": 40,
        "name": "裸露修的跌二次KUSO",
      },
      Object {
        "count": 37,
        "name": "中二",
      },
      Object {
        "count": 34,
        "name": "樱井孝宏",
      },
    ],
    "type": 2,
    "volumes": 0,
  },
  "tags": Array [
    "SUNRISE",
  ],
  "type": 2,
  "updatedAt": 1639569371,
  "volStatus": 0,
}
`;

exports[`user collection > should get subjects 1`] = `
Object {
  "data": Array [
    Object {
      "comment": "test comment",
      "epStatus": 23,
      "private": false,
      "rate": 0,
      "subject": Object {
        "airtime": Object {
          "date": "2008-04-06",
          "month": 4,
          "weekday": 7,
          "year": 2008,
        },
        "collection": Object {
          "1": 622,
          "2": 13216,
          "3": 147,
          "4": 224,
          "5": 115,
        },
        "eps": 25,
        "id": 8,
        "images": Object {
          "common": "https://lain.bgm.tv/pic/cover/c/c9/f0/8_wK0z3.jpg",
          "grid": "https://lain.bgm.tv/pic/cover/g/c9/f0/8_wK0z3.jpg",
          "large": "https://lain.bgm.tv/pic/cover/l/c9/f0/8_wK0z3.jpg",
          "medium": "https://lain.bgm.tv/pic/cover/m/c9/f0/8_wK0z3.jpg",
          "small": "https://lain.bgm.tv/pic/cover/s/c9/f0/8_wK0z3.jpg",
        },
        "infobox": Object {
          "Copyright": Array [
            Object {
              "v": "（C）2006 SUNRISE inc./MBS",
            },
          ],
          "中文名": Array [
            Object {
              "v": "Code Geass 反叛的鲁路修R2",
            },
          ],
          "人物原案": Array [
            Object {
              "v": "CLAMP",
            },
          ],
          "人物设定": Array [
            Object {
              "v": "木村貴宏",
            },
          ],
          "其他": Array [
            Object {
              "v": "",
            },
          ],
          "其他电视台": Array [
            Object {
              "v": "",
            },
          ],
          "别名": Array [
            Object {
              "v": "叛逆的鲁路修R2",
            },
            Object {
              "v": "Code Geass: Hangyaku no Lelouch R2",
            },
            Object {
              "v": "叛逆的勒鲁什R2",
            },
            Object {
              "v": "叛逆的鲁鲁修R2",
            },
            Object {
              "v": "コードギアス 反逆のルルーシュR2",
            },
            Object {
              "v": "Code Geass: Lelouch of the Rebellion R2",
            },
            Object {
              "v": "叛逆的勒路什R2",
            },
          ],
          "动画制作": Array [
            Object {
              "v": "サンライズ",
            },
          ],
          "官方网站": Array [
            Object {
              "v": "http://www.geass.jp/r2/",
            },
          ],
          "导演": Array [
            Object {
              "v": "谷口悟朗",
            },
          ],
          "摄影监督": Array [
            Object {
              "v": "大矢創太",
            },
          ],
          "播放电视台": Array [
            Object {
              "v": "每日放送",
            },
          ],
          "播放结束": Array [
            Object {
              "v": "2008年9月28日",
            },
          ],
          "放送开始": Array [
            Object {
              "v": "2008年4月6日",
            },
          ],
          "放送星期": Array [
            Object {
              "v": "",
            },
          ],
          "系列构成": Array [
            Object {
              "v": "大河内一楼",
            },
          ],
          "美术监督": Array [
            Object {
              "v": "菱沼由典",
            },
          ],
          "色彩设计": Array [
            Object {
              "v": "岩沢れい子",
            },
          ],
          "话数": Array [
            Object {
              "v": "25",
            },
          ],
          "音乐": Array [
            Object {
              "v": "中川幸太郎、黒石ひとみ",
            },
          ],
          "音乐制作": Array [
            Object {
              "v": "AUDIO PLANNING U",
            },
          ],
          "音响监督": Array [
            Object {
              "v": "浦上靖夫、井澤基",
            },
          ],
        },
        "locked": false,
        "metaTags": Array [],
        "name": "コードギアス 反逆のルルーシュR2",
        "nameCN": "Code Geass 反叛的鲁路修R2",
        "nsfw": false,
        "platform": Object {
          "alias": "tv",
          "enableHeader": true,
          "id": 1,
          "order": 0,
          "type": "TV",
          "typeCN": "TV",
          "wikiTpl": "TVAnime",
        },
        "rating": Object {
          "count": Array [
            44,
            15,
            32,
            66,
            145,
            457,
            1472,
            3190,
            2640,
            1377,
          ],
          "score": 8.19,
          "total": 9438,
        },
        "redirect": 0,
        "series": false,
        "seriesEntry": 0,
        "summary": "　　“东京决战”一年后，布里塔尼亚少年鲁路修在11区（原日本国）过着平凡的学生生活。但是，鲁路修与弟弟罗洛的一次出行，遇到了黑色骑士团的余党。在与少女C.C再次结成契约之后，尘封的记忆摆在了鲁路修的面前。
　　身为帝国王子的鲁路修，为了建立人人平等的世界、让妹妹娜娜丽幸福的世界，而使用GEASS，令人绝对服从的力量，带领黑色骑士团向帝国宣战。带上假面化名ZERO的他，却在一年前的“东京决战”中被好友朱雀击败，被帝国皇帝抹去了记忆。
　　现在，恢复记忆的鲁路修不仅要面对帝国的强大军事力量，更要面对虚假的弟弟罗洛、失踪的妹妹娜娜丽、不知敌友的中华联盟、内部出现分歧的黑色骑士团。面对内忧外患，鲁路修走上了GEASS之力的诅咒——孤独的王之路。 ",
        "tags": Array [
          Object {
            "count": 1645,
            "name": "叛逆的鲁鲁修",
          },
          Object {
            "count": 1229,
            "name": "SUNRISE",
          },
          Object {
            "count": 936,
            "name": "反逆のルルーシュ",
          },
          Object {
            "count": 721,
            "name": "还是死妹控",
          },
          Object {
            "count": 664,
            "name": "TV",
          },
          Object {
            "count": 603,
            "name": "妹控",
          },
          Object {
            "count": 569,
            "name": "codegeass",
          },
          Object {
            "count": 523,
            "name": "谷口悟朗",
          },
          Object {
            "count": 453,
            "name": "鲁路修",
          },
          Object {
            "count": 427,
            "name": "R2",
          },
          Object {
            "count": 409,
            "name": "2008",
          },
          Object {
            "count": 385,
            "name": "原创",
          },
          Object {
            "count": 357,
            "name": "2008年4月",
          },
          Object {
            "count": 174,
            "name": "大河内一楼",
          },
          Object {
            "count": 151,
            "name": "日升",
          },
          Object {
            "count": 120,
            "name": "萝卜",
          },
          Object {
            "count": 111,
            "name": "机战",
          },
          Object {
            "count": 104,
            "name": "狗得鸡鸭死",
          },
          Object {
            "count": 94,
            "name": "福山润",
          },
          Object {
            "count": 84,
            "name": "露露胸",
          },
          Object {
            "count": 69,
            "name": "CLAMP",
          },
          Object {
            "count": 67,
            "name": "科幻",
          },
          Object {
            "count": 62,
            "name": "鲁鲁修",
          },
          Object {
            "count": 57,
            "name": "GEASS",
          },
          Object {
            "count": 54,
            "name": "神作",
          },
          Object {
            "count": 49,
            "name": "战斗",
          },
          Object {
            "count": 41,
            "name": "战争",
          },
          Object {
            "count": 40,
            "name": "裸露修的跌二次KUSO",
          },
          Object {
            "count": 37,
            "name": "中二",
          },
          Object {
            "count": 34,
            "name": "樱井孝宏",
          },
        ],
        "type": 2,
        "volumes": 0,
      },
      "tags": Array [
        "SUNRISE",
      ],
      "type": 2,
      "updatedAt": 1639569371,
      "volStatus": 0,
    },
  ],
  "total": 1,
}
`;

exports[`user collection > should get summary 1`] = `
Object {
  "character": Object {
    "count": 0,
    "detail": Array [],
  },
  "index": Object {
    "count": 0,
    "detail": Array [],
  },
  "person": Object {
    "count": 0,
    "detail": Array [],
  },
  "subject": Object {
    "1": Object {
      "counts": Object {
        "1": 0,
        "2": 0,
        "3": 0,
        "4": 1,
        "5": 0,
      },
      "details": Object {
        "1": Array [],
        "2": Array [],
      },
    },
    "2": Object {
      "counts": Object {
        "1": 0,
        "2": 1,
        "3": 0,
        "4": 0,
        "5": 0,
      },
      "details": Object {
        "1": Array [],
        "2": Array [
          Object {
            "id": 8,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/c9/f0/8_wK0z3.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/c9/f0/8_wK0z3.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/c9/f0/8_wK0z3.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/c9/f0/8_wK0z3.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/c9/f0/8_wK0z3.jpg",
            },
            "locked": false,
            "name": "コードギアス 反逆のルルーシュR2",
            "nameCN": "Code Geass 反叛的鲁路修R2",
            "nsfw": false,
            "type": 2,
          },
        ],
      },
    },
    "3": Object {
      "counts": Object {
        "1": 0,
        "2": 0,
        "3": 1,
        "4": 0,
        "5": 0,
      },
      "details": Object {
        "1": Array [],
        "2": Array [],
      },
    },
    "4": Object {
      "counts": Object {
        "1": 21,
        "2": 0,
        "3": 0,
        "4": 0,
        "5": 1,
      },
      "details": Object {
        "1": Array [
          Object {
            "id": 4,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/a8/7f/4_cMMK5.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/a8/7f/4_cMMK5.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/a8/7f/4_cMMK5.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/a8/7f/4_cMMK5.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/a8/7f/4_cMMK5.jpg",
            },
            "locked": false,
            "name": "メタルスラッグ7",
            "nameCN": "合金弹头7",
            "nsfw": false,
            "type": 4,
          },
          Object {
            "id": 84399,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/85/3f/84399_y0J0e.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/85/3f/84399_y0J0e.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/85/3f/84399_y0J0e.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/85/3f/84399_y0J0e.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/85/3f/84399_y0J0e.jpg",
            },
            "locked": false,
            "name": "Criminal Minds (Season 9)",
            "nameCN": "犯罪心理 第九季",
            "nsfw": false,
            "type": 6,
          },
          Object {
            "id": 104833,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/35/eb/104833_CAd6k.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/35/eb/104833_CAd6k.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/35/eb/104833_CAd6k.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/35/eb/104833_CAd6k.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/35/eb/104833_CAd6k.jpg",
            },
            "locked": false,
            "name": "Criminal Minds (Season 10)",
            "nameCN": "犯罪心理 第十季",
            "nsfw": false,
            "type": 6,
          },
          Object {
            "id": 148228,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/72/8c/148228_O5mS0.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/72/8c/148228_O5mS0.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/72/8c/148228_O5mS0.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/72/8c/148228_O5mS0.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/72/8c/148228_O5mS0.jpg",
            },
            "locked": false,
            "name": "Criminal Minds (Season 11)",
            "nameCN": "犯罪心理  第11季",
            "nsfw": false,
            "type": 6,
          },
          Object {
            "id": 184017,
            "locked": false,
            "name": "沙盒",
            "nameCN": "Bangumi Wiki 动画测试用沙盘",
            "nsfw": false,
            "type": 2,
          },
          Object {
            "id": 194118,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/5f/65/194118_5c9H0.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/5f/65/194118_5c9H0.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/5f/65/194118_5c9H0.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/5f/65/194118_5c9H0.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/5f/65/194118_5c9H0.jpg",
            },
            "locked": false,
            "name": "Criminal Minds Season 12",
            "nameCN": "犯罪心理 第12季",
            "nsfw": false,
            "type": 6,
          },
          Object {
            "id": 208783,
            "images": Object {
              "common": "https://lain.bgm.tv/pic/cover/c/c7/0d/208783_0J0TH.jpg",
              "grid": "https://lain.bgm.tv/pic/cover/g/c7/0d/208783_0J0TH.jpg",
              "large": "https://lain.bgm.tv/pic/cover/l/c7/0d/208783_0J0TH.jpg",
              "medium": "https://lain.bgm.tv/pic/cover/m/c7/0d/208783_0J0TH.jpg",
              "small": "https://lain.bgm.tv/pic/cover/s/c7/0d/208783_0J0TH.jpg",
            },
            "locked": false,
            "name": "Stranger Things Season 2",
            "nameCN": "怪奇物语 第二季",
            "nsfw": false,
            "type": 6,
          },
        ],
        "2": Array [],
      },
    },
    "6": Object {
      "counts": Object {
        "1": 0,
        "2": 0,
        "3": 0,
        "4": 0,
        "5": 0,
      },
      "details": Object {
        "1": Array [],
        "2": Array [],
      },
    },
  },
}
`;

exports[`user friends > should get friends 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": 1658142804,
      "description": "",
      "grade": 1,
      "user": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 427613,
        "joinedAt": 0,
        "nickname": "nickname 427613",
        "sign": "sing 427613",
        "username": "427613",
      },
    },
  ],
  "total": 1,
}
`;
